* …

=== External library changes in 1.36 ===
* …

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* pear/mail_mime was upgraded from 1.10.8 to 1.10.9.
* wikimedia/html-formatter was upgraded from 1.0.2 to 2.0.0.
* Updated OOUI from 0.39.3 to 0.40.3.
* …

===== Changed development-only external libraries =====
* …

==== Removed external libraries ====
* The html5shiv library has been removed, as support for Internet Explorer 8 has
  been dropped.
* …

=== Bug fixes in 1.36 ===
* …

=== Action API changes in 1.36 ===
* …

=== Action API internal changes in 1.36 ===
* …

=== Languages updated in 1.36 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.36 ===
* Multiple methods that fell back to the $wgUser global variable were
  individually hard deprecated previously. The following have now been removed:
  - ApiTestCase::doLogin
  - File::delete
  - ForeignDBFile::delete
  - LocalFile::delete
  - LocalFile::deleteOld
  - PageArchive::undelete
  - RecentChange::markPatrolled
  - Title::getUserPermissionsErrors
  - Title::quickUserCan
  - Title::userCan
  - WebRequest::getLimitOffset
  - All methods of the old SpecialPageFactory; the entire class was removed
* Multiple methods previously had optional User parameters, with fallbacks
  to the $wgUser global variable. Not passing a User to those methods was
  previously hard deprecated, and support for now passing a User has now
  been removed:
   - FileDeleteForm::__construct
   - LocalFileDeleteBatch::__construct
   - LogPage::addEntry (also accepts user id instead)
   - PatrolLog::record
   - Title::getNotificationTimestamp (though the entire method is deprecated)
* The global function `wfWaitForSlaves`, deprecated in 1.27 and hard-deprecated