@@ -129,8 +129,8 @@ jquery.chosen:
 
 jquery.client:
   type: tar
-  src: https://registry.npmjs.org/jquery-client/-/jquery-client-2.0.2.tgz
-  integrity: sha256-8c8nBbBykHEMc4I7ksdKJvvw/P7WkaC2X46RTPdz/pw=
+  src: https://registry.npmjs.org/jquery-client/-/jquery-client-3.0.0.tgz
+  integrity: sha256-BRPTsJn7fViZ2ip0YUBT9L90wJ8s0BFE17ccpmLfPUk=
   dest:
     package/AUTHORS.txt:
     package/jquery.client.js:
