@@ -1,4 +1,4 @@
-Copyright 2010-2015 jquery-client maintainers and other contributors.
+Copyright 2010-2020 wikimedia/jquery-client maintainers and other contributors.
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
