@@ -1,6 +1,14 @@
-[![Build Status](https://travis-ci.org/wikimedia/jquery-client.svg?branch=master)](https://travis-ci.org/wikimedia/jquery-client) [![npm](https://img.shields.io/npm/v/jquery-client.svg?style=flat)](https://www.npmjs.com/package/jquery-client)
+[![npm](https://img.shields.io/npm/v/jquery-client.svg?style=flat)](https://www.npmjs.com/package/jquery-client)
 
 jQuery Client
 =================
 
-jQuery Client is a jQuery plugin for user-agent detection.
+A minimal user-agent parser for client-side JavaScript.
+
+## Documentation
+
+See [API Documentation](https://doc.wikimedia.org/jquery-client/master/#!/api/jQuery.client) and [Test coverage](https://doc.wikimedia.org/cover/jquery-client/) on doc.wikimedia.org.
+
+## Issue tracker
+
+Report bugs or feature requests to [Wikimedia Phabricator](https://phabricator.wikimedia.org/tag/jquery-client/).
