@@ -62,6 +62,7 @@ For notes on 1.35.x and older releases, see HISTORY.
 * pear/mail_mime was upgraded from 1.10.8 to 1.10.9.
 * wikimedia/html-formatter was upgraded from 1.0.2 to 2.0.0.
 * Updated OOUI from 0.39.3 to 0.40.3.
+* Updated jquery.client from 2.0.2 to 3.0.0.
 * …
 
 ===== Changed development-only external libraries =====
